# stock-tracker-agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  README.md  curl_examples.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run_tests.py
resources/: alert_history.json  tracker_list.json
src/: __init__.py  main.py
src/sentinel/: __init__.py  scheduler.py
src/sentinel/agents/: handlers.py  prompts.py  prompts.yaml
src/sentinel/comm/: chat_history.py  chat_history_old.py  telegram.py
src/sentinel/config/: __init__.py  logging.py  settings.py
src/sentinel/core/: __init__.py  agent_tools.py  penny_stock_tools.py  politician_tracker.py  stock_checker.py  stock_query.py  tools.py  tracker.py
src/sentinel/db/: database.py  migration.py  models.py  repositories.py
src/sentinel/events/: __init__.py  event_bus.py  event_handlers.py  events.py
src/sentinel/ormdb/: __init__.py  database.py  migration.py  models.py  penny_stock_models.py  repositories.py
src/sentinel/ormdb/repositories/: __init__.py  alert_history.py  base.py  chat_message.py  (+5 more)
src/sentinel/services/: __init__.py  alert_service.py  congressional_service.py  congressional_tracking_service.py  notification_service.py  stock_service.py  tracking_service.py
src/sentinel/utils/: config.py
src/sentinel/webapi/: app.py  exceptions.py  health.py
src/stock_tracker/: __init__.py  scheduler.py
src/stock_tracker/agents/: __init__.py  handlers.py  prompts.py  prompts.yaml
src/stock_tracker/comm/: __init__.py  chat_history_old.py  telegram.py
src/stock_tracker/core/: stock_checker.py  tools.py  tracker.py
src/stock_tracker/db/: __init__.py  database.py  models.py  repositories.py
src/stock_tracker/utils/: config.py
src/stock_tracker/webapi/: __init__.py  app.py
tests/: conftest.py
tests/test_agents/: test_handlers.py  test_prompts.py
tests/test_comm/: test_chat_history.py  test_telegram.py
tests/test_core/: test_agent_tools.py  test_politician_tracker.py  test_scheduler.py  test_stock_checker.py  test_tools.py  test_tracker.py
tests/test_webapi/: test_app.py
(+56 files in other folders)
